Tue Jun 13 22:26:54 MDT  David Trowbridge <trowbrds@gmail.com>

	* data/topic-change.glade:
	  - Fix topic change dialog to not resize the window as you type
	    words. (#343567)

Tue Jun 12 16:52:40 MDT 2006  Steve Frécinaux <steve@istique.net>

	* src/fe-gnome/util.c:
	* src/fe-gnome/util.h:
	  - New GtkMenuPositionFunc functions to position context menu when
	    using keyboard.
	* src/fe-gnome/navigation-tree.c:
	  - foo_context() functions now return the menu instead of showing it
	  - handle the popup-menu event (issued when using keyboard) and
	    position the context menu accordingly.

Mon May 12 17:12:08 CEST 2006  Steve Frécinaux <steve@istique.net>

	* src/fe-gnome/text-entry.c:
	  - Fix widget cycling by not eating Ctrl+Tab

Wed May 24 20:55:18 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/userlist-gui.c:
	* src/fe-gnome/userlist.c:
	  - Fix plural l10n (#342841).

Wed May 24 20:42:41 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/conversation-panel.c:
	* data/xchat-gnome-ui.xml:
	  - Add "send file" and "ignore" items to the default context menu for
	    query windows (#333455).

Tue May 23 21:59:01 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/xtext.c:
	* src/fe-gnome/xtext.h:
	  - Add two new signals "word_enter" and "word_leave".
	* src/fe-gnome/userlist-gui.c:
	* src/fe-gnome/conversation-panel.c:
	  - The "whois tooltip" is now also displayed in the
	    conversation panel!

Mon May 22 19:49:29 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* po/POTFILES.in:
	  - Add src/fe-gnome/userlist.c in the list of translatable files.

Sun May 21 16:34:23 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/navigation-tree.c:
	  - Change "Auto-join on startup" to "Auto-join on connect" to
	    hopefully make the behavior more clear. (#338300)

Sun May 21 19:06:43 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/common/plugin.c:
	  - Backport from xchat CVS.